# pl1

./: main git commands.txt  readme.md  repository-link.url
01-Libraries-Make-CMake/1.make-1/: makefile
01-Libraries-Make-CMake/10.cmake-3/: CMakeLists.txt  main.c
01-Libraries-Make-CMake/2.make-2/: makefile  utils.c
01-Libraries-Make-CMake/3.nmake/: MAKEFILE
01-Libraries-Make-CMake/4.msbuild/: info.txt
01-Libraries-Make-CMake/5.libraries-cmd/: info.txt
01-Libraries-Make-CMake/7.cmake-info/: cmake commands.txt  Введение в CMake _ Хабр.html
01-Libraries-Make-CMake/8.cmake-1/: CMakeLists.txt
01-Libraries-Make-CMake/9.cmake-2/: CMakeLists.txt  main.c  utils.c
02-Libraries-Examples/1.mpir/: main.c
02-Libraries-Examples/2.libsdl/Tank/: CMakeLists.txt  main.c
02-Libraries-Examples/3.raylib/: examples.txt
02-Libraries-Examples/3.raylib/InputKeys/: CMakeLists.txt  main.c
02-Libraries-Examples/5.winapi/: info.txt
02-Libraries-Examples/6.gtk/: gtk3_examples.lnk  msys2.txt  probably install gtk in windows with vcpkg.txt
04-Git-Local-C-Themes/info/: const.docx  global.docx  static.docx
04-Git-Local/gitignoreExamples/: .gitignore  default.gitignore
04-Git-Local/info/: links.txt
05-Git-Remote-BST/Trees/: Trees.sln
06-BinaryFiles-Sort-Algorithms/BinaryFiles/: BinaryFiles.sln
06-BinaryFiles-Sort-Algorithms/SortAlgorithms/: SortAlgorithms.sln
07-FunctionPointers-Callbacks/FunctionPointers/: FunctionPointers.sln
07-FunctionPointers-Callbacks/fromCommandLine/: commands.txt  cs.asm  main.c
Tasks/: description.txt  useful libraries.txt
(+262 files in other folders)
